<resources>
    <string name="app_name">Умный Арзамас</string>
    <string name="enter">Вход</string>
    <string name="registration">Регистрация</string>
    <string name="sign_in">Войти</string>
    <string name="sign_up">Зарегистрироваться</string>
    <string name="login">Электронная почта</string>
    <string name="password">Пароль</string>
    <string name="recycle_password">Повтоите пароль</string>
    <string name="always_use_this_account">Всегда использовать этот аккаунт</string>
    <string name="back">Назад</string>
    <string name="cancel">Отмена</string>
    <string name="search_on_map">Найти на карте</string>
    <string name="chats">Чаты</string>
    <string name="search_chat">Найти чат</string>
    <string name="map">Карта</string>
    <string name="all_chats">Все чаты</string>
    <string name="my_chats">Мои чаты</string>
    <string name="about_chat">О чате</string>
    <string name="refactor_image">Изменить изображение</string>
    <string name="refactor_name">Изменить навание</string>
    <string name="refactor_description">Изменить описание</string>
    <string name="user_name">Имя</string>
    <string name="user_family">Фамилия</string>
    <string name="wrong_login">Неверный логин</string>
    <string name="wrong_password">Неверный пароль</string>
    <string name="none" />
    <string name="enter_password">Введите пароль</string>
    <string name="enter_login">Введите логин</string>
    <string name="enter_second_password">Повторите пароль</string>
    <string name="enter_name">Введите имя</string>
    <string name="enter_family">Введите фамилию</string>
    <string name="short_password">Пароль должен содержать не мене 6 символов</string>
    <string name="wrong_or_used_login">Некорректный логин или пользователь с этим логином уже существует или ваша почта не верифицирована</string>
    <string name="exit">Выход</string>
    <string name="sign_out">Выйти</string>
    <string name="realy_exit">Вы действительно хотите выйти из аккаунта?</string>
    <string name="new_chat">Новый чат</string>
    <string name="chat_name">Название</string>
    <string name="chat_category">Категория</string>
    <string name="description">Описание</string>
    <string name="create">Создать</string>
    <string name="enter_category">Введите категорию</string>
    <string name="enter_chat_name">Введте название</string>
    <string name="default_first_message">Добро пожаловать в новый чат</string>
    <string name="default_chat_description">Описание</string>
    <string name="delete_account">Удалить аккаунт</string>
    <string name="refactor_name_and_family">Изменить имя и фамилию</string>
    <string name="change">Изменить</string>
    <string name="change_name_and_family">Изменить имя\nи фамилию</string>
    <string name="enter_new_name">Введите имя</string>
    <string name="enter_new_family">Введите фамилию</string>
    <string name="new_locate">Новая метка</string>
    <string name="add_locate_mod_enabled">Режим добавления метки включен</string>
    <string name="add_locate_mod_disabled">Режим добавления метки выключен</string>
    <string name="you_sign_in_as">Вы вошли как </string>
    <string name="forgot_password">Забыли пароль?</string>
    <string name="verification_email_was_sand">Проверьте почту для подтверждения</string>
    <string name="email_no_verificated">Верифицируйте почту</string>
    <string name="email_reset_password">Провертьте почту для смены пароля</string>
    <string name="resend_verification_email">Повторить отправку</string>
    <string name="error">Ошибка</string>
    <string name="user_settings">Настройки профиля</string>
    <string name="user_not_found">Пользователь не найден</string>
    <string name="review_connection">Проверьте подключение к интернету</string>
    <string name="enter_description">Выберите категорию</string>
    <string name="your_account_has_been_deleted">Ваш профиль успешно удален</string>
    <string name="select_img">Выбрать изображение</string>
    <string name="change_image">Изменить изображение</string>
    <string name="title_activity_hub">HubActivity</string>
    <string name="title_map">Карта</string>
    <string name="title_all_chats">Все чаты</string>
    <string name="title_my_chats">Мои чаты</string>
    <string name="error_of_email_send">Ошибка отправки</string>
    <string name="search">Поиск</string>
    <string name="my_message_name">Вы</string>
    <string name="icon_has_been_changed">Изображение изменено</string>
    <string name="chat_settings">О чате</string>
    <string name="user_change_chat_neme">изменил название чата с</string>
    <string name="on">на</string>
    <string name="change_name">Изменить название</string>
    <string name="user_change_description_neme">изменил описание чата с</string>
    <string name="change_description">Изменить описание</string>
    <string name="chat_desription">Описание</string>
    <string name="user_change_chat_image">изменил изображение</string>
    <string name="title_activity_admin_hub">AdminHubActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="all_uses">Все пользователи</string>
    <string name="enter_locate_name">Введите название</string>
    <string name="set_icon">Добавить изображение</string>
    <string name="delete_chat">Удалить чат</string>
    <string name="rejection_admin_account">Отказаться от прав администратора</string>
    <string name="realy_reject">Вы действительно хотите отказаться от прав администратора?</string>
    <string name="reject">Отказаться</string>
    <string name="rejection">Отказ</string>
    <string name="databese_request_canceled">Доступ запрещен</string>
    <string name="data_not_find">Данные не найдены</string>
    <string name="delete">Удалить</string>
    <string name="realy_delete_account">Вы действительно хотите удалить аккаунт без возможности восстановления?</string>
    <string name="delete_account_error">Ошибка при удалении аккаунта</string>
    <string name="delete_account_succesful">Аккаунт удален</string>
    <string name="realy_delete_chat">Вы действительно хотите удалить чат без возможности восстановления?</string>
    <string name="delete_chat_succesful">Чат удалён</string>
    <string name="you_banned">Вы заблокированы</string>
    <string name="chat_banned">Чат заблокирован</string>
    <string name="go_to_chat">Перейти к чату</string>

</resources>