<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_all_chats">

    <fragment
        android:id="@+id/navigation_all_chats"
        android:name="com.example.smartarzamas.ui.hubnavigation.allchats.AllChatsFragment"
        android:label="@string/title_all_chats"
        tools:layout="@layout/navigation_fragment_all_chats" />

    <fragment
        android:id="@+id/navigation_my_chats"
        android:name="com.example.smartarzamas.ui.hubnavigation.mychats.MyChatsFragment"
        android:label="@string/title_my_chats"
        tools:layout="@layout/navigation_fragment_my_chats" />

    <fragment
        android:id="@+id/navigation_map"
        android:name="com.example.smartarzamas.ui.hubnavigation.map.MapFragment"
        android:label="@string/title_map"
        tools:layout="@layout/navigation_fragment_map" />

</navigation>