<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@drawable/round_corner_dialog">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="120dp"
                android:layout_gravity="center_horizontal"
                android:text="@string/change_name_and_family"
                android:textSize="48sp"
                android:textStyle="bold"
                android:textAlignment="center"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="20sp"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/et_user_name"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:hint="@string/user_name" />
                <TextView
                    android:id="@+id/tv_name_err"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:visibility="gone"
                    android:textColor="@color/design_default_color_error" />
                <EditText
                    android:id="@+id/et_user_family"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:hint="@string/user_family" />
                <TextView
                    android:id="@+id/tv_family_err"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:visibility="gone"
                    android:textColor="@color/design_default_color_error" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:layout_marginHorizontal="30dp"
                android:layout_gravity="right"
                android:layout_marginBottom="10dp">

                <Button
                    android:id="@+id/bt_cancel"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/cancel"
                    style="@style/default_button"/>

                <View
                    android:layout_width="30dp"
                    android:layout_height="match_parent"/>

                <Button
                    android:id="@+id/bt_change_user_name_and_family"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/change"
                    style="@style/default_button"/>

            </LinearLayout>


        </LinearLayout>
    </ScrollView>




</LinearLayout>