<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    style="@style/dialog.default">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView

                android:layout_gravity="center_horizontal"
                style="@style/text.title.main"
                android:text="@string/change_description"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="20sp"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/et_chat_description"
                    android:layout_width="match_parent"
                    style="@style/editText.span.main"
                    android:hint="@string/chat_desription" />
                <TextView
                    android:id="@+id/tv_description_err"
                    style="@style/text.warning.main"
                    android:visibility="gone" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:layout_marginHorizontal="30dp"
                android:layout_gravity="right"
                android:layout_marginBottom="10dp">

                <Button
                    android:id="@+id/bt_cancel"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/cancel"
                    style="@style/button.default"/>

                <View
                    android:layout_width="30dp"
                    android:layout_height="match_parent"/>

                <Button
                    android:id="@+id/bt_change_chat_description"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/change"
                    style="@style/button.default" />

            </LinearLayout>


        </LinearLayout>
    </ScrollView>




</LinearLayout>