<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ChatSettingsActivity"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbarMain"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/tool_bar"
        android:contentInsetStart="0dp"
        android:contentInsetLeft="0dp"
        android:elevation="4dp"
        app:contentInsetLeft="0dp"
        app:contentInsetStart="0dp">

        <ImageButton
            android:id="@+id/bt_close"
            android:layout_width="50dp"
            android:layout_height="50dp"
            app:srcCompat="?attr/actionModeCloseDrawable"
            android:background="@drawable/round_corner_button"/>

        <TextView
            android:textSize="30sp"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textAlignment="viewStart"
            android:text="@string/about_chat"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp" />

    </androidx.appcompat.widget.Toolbar>


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:layout_marginTop="?attr/actionBarSize">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <LinearLayout
                    android:layout_width="200dp"
                    android:layout_height="200dp"
                    android:orientation="vertical">
                    <ImageView
                        android:id="@+id/chat_icon"
                        android:visibility="visible"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"/>
                    <ProgressBar
                        android:id="@+id/progress"
                        android:visibility="gone"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">
                    <TextView
                        android:id="@+id/chat_name"
                        android:textSize="24dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                    <TextView
                        android:id="@+id/chat_description"
                        android:layout_width="wrap_content"
                        android:textSize="24dp"
                        android:layout_height="wrap_content"/>
                </LinearLayout>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <Button
                    android:id="@+id/bt_change_chat_icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/round_corner_button"
                    android:text="@string/refactor_image"/>
                <Button
                    android:id="@+id/bt_change_chat_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/round_corner_button"
                    android:text="@string/refactor_name"/>
                <Button
                    android:id="@+id/bt_delete_chat"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/round_corner_button"
                    android:text="@string/refactor_description"/>
            </LinearLayout>


            <androidx.recyclerview.widget.RecyclerView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/rv_members"/>

        </LinearLayout>
    </ScrollView>


    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/fragmentContainerView"
        android:layout_width="@dimen/dialog_width"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginVertical="@dimen/dialog_margin_tool_bar" />

</FrameLayout>